[tool.poetry]
name = "pyde1"
version = "0.1.0"
description = ""
authors = ["Jeff Kletsky <git-commits@allycomm.com>", Mitchell Karchemsky <mitch.karchemsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17.0"
bleak = "^0.19.0"
paho-mqtt = "^1.6.1"
PyYAML = "^6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
